fixed alignments of elements for mobile versions, added link box to Contact page

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ html {
   width: 80%;
   height: auto;
   margin-left: 10%;
-  margin-top: 0.5%;  
+  margin-top: 5%;  
   border-radius: 30px;
   line-height: 1;
   padding-top: 1.5%;
@@ -62,7 +62,7 @@ html {
   padding-right: 5%;
   padding-bottom: 1%;
   background-color: #0009;
-  margin-top:  0.5%;
+  margin-top:  5%;
   margin-bottom: 0.5%;
   margin-left: 3%;
   margin-right: 3%;
@@ -73,7 +73,10 @@ html {
 
 .contact {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  height: 90vh;
+  margin-top: 3%;
+  grid-template-columns: 1fr 1.4fr;
   grid-template-rows: 1fr;
   grid-template-areas:
   "contact maillist";
@@ -111,7 +114,10 @@ html {
 
 .navbar{
   width: 100%;
-	background-color: #0009;
+  position: fixed;
+  top: 0;
+	background-color: #28282A;
+  opacity: 100%;
 	grid-area: nav;
   line-height: 0.5fr;
   display: inline-flex;
@@ -294,7 +300,7 @@ footer{
 
   .contact {
     display: grid;
-    margin-top: 1.5%;
+    margin-top: 1.5;
     grid-template-columns: 1fr;
     grid-template-rows: 0.1fr 0.1fr 0.1fr;
     grid-template-areas:
@@ -340,8 +346,8 @@ footer{
   }
 
   .navbar.active {
-    margin-bottom: 100px;
-    margin-top: 10px;
+    margin-top: 100px;
+    margin-bottom: 10px;
     transition: 0.3s;
   }
 
